<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="16dp"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_main" tools:context=".MainActivity"
    android:orientation="vertical"
    >

    <TextView
        style="@style/home_label"
        android:id="@+id/home_button_take5"
        android:text="@string/home_take5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        />
    <TextView
        style="@style/home_label"
        android:id="@+id/home_button_hazard"
        android:text="@string/home_hazard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        />
    <TextView
        style="@style/home_label"
        android:id="@+id/home_button_incident"
        android:text="@string/home_incident"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        />
    <TextView
        style="@style/home_label"
        android:id="@+id/home_button_site_instruct"
        android:text="@string/home_site_inctruct"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        />
    <TextView
        android:text="\u00A9 2016 Adam Dilger"
        android:textSize="10sp"
        android:textColor="#c1c1c1"
        android:layout_weight="1"
        android:textAlignment="center"
        android:gravity="bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>
