<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/job_number_layout"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:text="@string/job_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <EditText
                    android:inputType="numberDecimal"
                    android:id="@+id/site_instruction_job_number_editText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <TextView
                android:text="@string/site"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <EditText
                android:inputType="text"
                android:id="@+id/site_instruction_site_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />
            <TextView
                android:text="@string/site_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <EditText
                android:inputType="text"
                android:id="@+id/site_instruction_site_location_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />
            <TextView
                android:text="@string/recipient"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <EditText

                android:inputType="text"
                android:id="@+id/site_instruction_recipient_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />
            <TextView
                android:text="@string/recipient_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <EditText

                android:inputType="textEmailAddress"
                android:id="@+id/site_instruction_recipient_email_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />
        </LinearLayout>
    </ScrollView>

</FrameLayout>