<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:text="@string/non_conformance_associated_job"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:paddingTop="7dp"
                android:paddingBottom="7dp"
                android:paddingLeft="50dp"
                android:paddingRight="50dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <RadioButton
                    android:id="@+id/non_conformance_radio_yes"
                    android:layout_weight="1"
                    android:text="Yes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <RadioButton
                    android:id="@+id/non_conformance_radio_no"
                    android:layout_weight="1"
                    android:text="No"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/job_number_layout"
                android:visibility="gone"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:text="@string/job_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <EditText
                    android:inputType="numberDecimal"
                    android:id="@+id/non_conformance_job_number_editText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <TextView
                android:text="@string/site"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <EditText
                android:inputType="text"
                android:id="@+id/non_conformance_site_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />
            <TextView
                android:text="@string/site_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <EditText
                android:inputType="text"
                android:id="@+id/non_conformance_site_location_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />
            <TextView
                android:text="@string/recipient"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <EditText
                android:inputType="text"
                android:id="@+id/non_conformance_recipient_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />
            <TextView
                android:text="@string/recipient_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <EditText
                android:inputType="textEmailAddress"
                android:id="@+id/non_conformance_recipient_email_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />
        </LinearLayout>
    </ScrollView>

</FrameLayout>