<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_user_profile"
    tools:context="com.semfapp.adamdilger.semf.userProfileActivity">


    <LinearLayout
        android:id="@+id/button_layout"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:layout_weight="1"
            android:id="@+id/up_button_clear"
            android:text="Clear All"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <Button
            android:layout_weight="1"
            android:id="@+id/up_button_save"
            android:text="Save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <ScrollView
        android:layout_above="@id/button_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:paddingTop="5dp"
                android:id="@+id/up_label_name"
                android:text="@string/up_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />
            <EditText
                android:id="@+id/up_text_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                />
            <TextView
                android:paddingTop="5dp"
                android:id="@+id/up_label_contact_num"
                android:text="@string/up_contact_num"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

            <EditText
                android:id="@+id/up_text_contact_num"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                />
            <TextView
                android:paddingTop="5dp"
                android:id="@+id/up_label_email"
                android:text="@string/up_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />
            <EditText
                android:id="@+id/up_text_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                />
            <TextView
                android:paddingTop="5dp"
                android:id="@+id/up_label_sup_name"
                android:text="@string/up_sup_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />
            <EditText
                android:id="@+id/up_text_sup_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                />
            <TextView
                android:paddingTop="5dp"
                android:id="@+id/up_label_sup_email"
                android:text="@string/up_sup_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />
            <EditText
                android:id="@+id/up_text_sup_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                />
            <TextView
                android:paddingTop="5dp"
                android:id="@+id/up_label_cc_hazard"
                android:text="@string/up_cc_hazard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />
            <EditText
                android:id="@+id/up_text_cc_hazard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                />
            <TextView
                android:paddingTop="5dp"
                android:id="@+id/up_label_cc_incident"
                android:text="@string/up_cc_incident"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />
            <EditText
                android:id="@+id/up_text_cc_incedent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                />
            <TextView
                android:paddingTop="5dp"
                android:id="@+id/up_label_cc_protect"
                android:text="@string/up_cc_protect"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />
            <EditText
                android:id="@+id/up_text_cc_protect"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                />
            <TextView
                android:paddingTop="5dp"
                android:id="@+id/up_label_cc_take5"
                android:text="@string/up_cc_take5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />
            <EditText
                android:id="@+id/up_text_cc_take5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
            </LinearLayout>
        </LinearLayout>
    </ScrollView>



</RelativeLayout>
